@@ -2,11 +2,9 @@ package tech.zeta.mavericks.digital_insurance_management_system.serviceTests;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
+import org.mockito.*;
 import org.springframework.security.authentication.AuthenticationManager;
-import tech.zeta.mavericks.digital_insurance_management_system.dto.request.UserUpdateRequest;
+import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import tech.zeta.mavericks.digital_insurance_management_system.entity.User;
 import tech.zeta.mavericks.digital_insurance_management_system.enums.RoleType;
 import tech.zeta.mavericks.digital_insurance_management_system.exception.PolicyNotFoundException;
@@ -15,7 +13,6 @@ import tech.zeta.mavericks.digital_insurance_management_system.repository.UserRe
 import tech.zeta.mavericks.digital_insurance_management_system.service.JWTService;
 import tech.zeta.mavericks.digital_insurance_management_system.service.UserService;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -24,120 +21,95 @@ import static org.mockito.Mockito.*;
 
 class UserServiceTest {
 
-    @Mock
-    private UserRepository userRepository;
-
-    @Mock
-    private JWTService jwtService;
-
-    @Mock
-    private AuthenticationManager authManager;
-
     @InjectMocks
     private UserService userService;
 
+    @Mock private JWTService jwtService;
+    @Mock private AuthenticationManager authManager;
+    @Mock private UserRepository userRepository;
+
+    private AutoCloseable closeable;
+
+    private User mockUser;
+
     @BeforeEach
     void setUp() {
-        MockitoAnnotations.openMocks(this);
+        closeable = MockitoAnnotations.openMocks(this);
+
+        mockUser = new User();
+        mockUser.setId(1L);
+        mockUser.setName("John");
+        mockUser.setEmail("john@example.com");
+        mockUser.setPassword("plainPassword");
+        mockUser.setRoleType(RoleType.USER);
     }
 
+    // Test: register success
     @Test
-    void register_UserSuccess() {
-        User user = new User();
-        user.setEmail("test@example.com");
-        user.setPassword("password123");
+    void testRegisterSuccess() {
+        when(userRepository.findByEmail("john@example.com")).thenReturn(null);
+        when(userRepository.save(any(User.class))).thenAnswer(invocation -> {
+            User saved = invocation.getArgument(0);
+            saved.setId(1L);
+            return saved;
+        });
 
-        when(userRepository.findByEmail(user.getEmail())).thenReturn(null);
-        when(userRepository.save(any(User.class))).thenAnswer(invocation -> invocation.getArgument(0));
+        User result = userService.register(mockUser);
 
-        User savedUser = userService.register(user);
-
-        assertNotNull(savedUser.getPassword());
-        assertNotEquals("password123", savedUser.getPassword()); // password encoded
+        assertNotNull(result);
+        assertEquals(1L, result.getId());
+        assertNotEquals("plainPassword", result.getPassword()); // password should be encoded
         verify(userRepository, times(1)).save(any(User.class));
     }
 
+    // Test: register fails (user already exists)
     @Test
-    void register_UserAlreadyExists() {
-        User user = new User();
-        user.setEmail("test@example.com");
+    void testRegisterUserAlreadyExists() {
+        when(userRepository.findByEmail("john@example.com")).thenReturn(mockUser);
 
-        when(userRepository.findByEmail(user.getEmail())).thenReturn(new User());
-
-        assertThrows(UserAlreadyExistException.class, () -> userService.register(user));
+        assertThrows(UserAlreadyExistException.class, () -> userService.register(mockUser));
     }
 
+    // Test: get all users
     @Test
-    void getAllUsers_ReturnsUsers() {
-        List<User> users = Arrays.asList(new User(), new User());
-        when(userRepository.findAll()).thenReturn(users);
+    void testGetAllUsers() {
+        when(userRepository.findAll()).thenReturn(List.of(mockUser));
 
-        List<User> result = userService.getAllUsers();
+        List<User> users = userService.getAllUsers();
 
-        assertEquals(2, result.size());
-        verify(userRepository, times(1)).findAll();
+        assertEquals(1, users.size());
+        assertEquals("John", users.get(0).getName());
     }
 
+    // Test: update user role success
     @Test
-    void updateUserRole_Success() {
-        User user = new User();
-        user.setRoleType(RoleType.USER);
-
-        when(userRepository.findById(1L)).thenReturn(Optional.of(user));
-        when(userRepository.save(any(User.class))).thenAnswer(invocation -> invocation.getArgument(0));
+    void testUpdateUserRoleSuccess() {
+        when(userRepository.findById(1L)).thenReturn(Optional.of(mockUser));
+        when(userRepository.save(any(User.class))).thenAnswer(inv -> inv.getArgument(0));
 
         User updated = userService.updateUserRole(1L, RoleType.ADMIN);
 
         assertEquals(RoleType.ADMIN, updated.getRoleType());
-        verify(userRepository, times(1)).save(user);
+        verify(userRepository, times(1)).save(mockUser);
     }
 
+    // Test: update user role not found
     @Test
-    void updateUserRole_UserNotFound() {
-        when(userRepository.findById(1L)).thenReturn(Optional.empty());
+    void testUpdateUserRoleNotFound() {
+        when(userRepository.findById(99L)).thenReturn(Optional.empty());
 
-        assertThrows(PolicyNotFoundException.class, () -> userService.updateUserRole(1L, RoleType.ADMIN));
+        assertThrows(PolicyNotFoundException.class, () -> userService.updateUserRole(99L, RoleType.ADMIN));
     }
 
+    // Test: get users by ids
     @Test
-    void updateUserDetails_Success() {
-        User user = new User();
-        user.setName("Old Name");
-        user.setEmail("old@example.com");
+    void testGetUsersByIds() {
+        when(userRepository.findByIds(List.of(1L))).thenReturn(List.of(mockUser));
 
-        UserUpdateRequest request = new UserUpdateRequest();
-        request.setName("New Name");
-        request.setEmail("new@example.com");
+        List<User> users = userService.getUsersByIds(List.of(1L));
 
-        when(userRepository.findById(1L)).thenReturn(Optional.of(user));
-        when(userRepository.save(any(User.class))).thenAnswer(invocation -> invocation.getArgument(0));
-
-        User updated = userService.updateUserDetails(1L, request);
-
-        assertEquals("New Name", updated.getName());
-        assertEquals("new@example.com", updated.getEmail());
-        verify(userRepository, times(1)).save(user);
-    }
-
-    @Test
-    void updateUserDetails_UserNotFound() {
-        UserUpdateRequest request = new UserUpdateRequest();
-        when(userRepository.findById(1L)).thenReturn(Optional.empty());
-
-        assertThrows(PolicyNotFoundException.class, () -> userService.updateUserDetails(1L, request));
-    }
-
-    @Test
-    void getUsersByIds_ReturnsUsers() {
-        User u1 = new User();
-        User u2 = new User();
-        List<User> users = Arrays.asList(u1, u2);
-
-        when(userRepository.findByIds(Arrays.asList(1L, 2L))).thenReturn(users);
-
-        List<User> result = userService.getUsersByIds(Arrays.asList(1L, 2L));
-
-        assertEquals(2, result.size());
-        verify(userRepository, times(1)).findByIds(Arrays.asList(1L, 2L));
+        assertEquals(1, users.size());
+        assertEquals("john@example.com", users.get(0).getEmail());
     }
 }
+
